WIP: Refactored UserController and UserMetadataMappingWebController
Both classes have been refactored to separate out the controller and service.